Bug 180978 - Kate crashes when trying to enable External Tools
Summary: Kate crashes when trying to enable External Tools
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-16 15:48 UTC by Andrius
Modified: 2009-03-08 18:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius 2009-01-16 15:48:04 UTC
Version:            (using Devel)
Compiler:          msvc binaries from installer 
OS:                MS Windows
Installed from:    Compiled sources

At least in MS Windows, kate crashes when clicking in the "External Tools" checkbox in plugins configuration.
Comment 1 Eduard Sukharev 2009-01-19 14:11:27 UTC
I've checked on Kate from trunk (>=20090106) with MinGW and there's no crash.
Please, get the latest build for MSVC and check if this bug still persists. If not - please, close the bug.
Comment 2 Andrius 2009-01-29 20:01:20 UTC
This bug is still present in 4.2-msvc
I suspect msvc binaries ( not just in kate ) are having problems while loading certain dlls.
Comment 3 Andrius 2009-03-06 23:42:29 UTC
this bug still persists in KDE 4.2.1
(adding kde-windows to CC list)
Comment 4 Christian Ehrlicher 2009-03-08 18:36:10 UTC
SVN commit 936942 by chehrlic:

fix crash on win32 with msvc

BUG: 180978

 M  +5 -8      kateexternaltools.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=936942