fix crash on win32 with msvc

BUG: 180978

svn path=/trunk/KDE/kdesdk/kate/; revision=936942